--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-redux": "^7.0.2"
+    "react-redux": "^7.0.2",
+    "redux-thunk": "^2.3.0"
   }
 }
