--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
