--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.8.1",
-    "@fortawesome/free-regular-svg-icons": "^5.8.1",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-brands-svg-icons": "^5.10.1",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "i": "^0.3.6",
-    "lodash": "^4.17.11",
-    "npm": "^6.9.0",
+    "lodash": "^4.17.15",
+    "npm": "^6.10.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
+    "react-scripts": "^3.0.1",
+    "redux": "^4.0.4",
     "uuid": "^3.3.2"
   },
   "scripts": {
@@ -33,7 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "react-redux": "^7.0.2",
-    "redux-saga": "^1.0.2"
+    "react-redux": "^7.1.0",
+    "redux-saga": "^1.0.5"
   }
 }
